# dailysignal

./: .coverage  .gitignore  Dockerfile  README.md  pyproject.toml  schema.sql
.github/workflows/: afternoon.yml  ci.yml  morning.yml
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  supervisord.conf
frontend/src/: App.jsx
frontend/src/pages/: About.jsx  Admin.jsx  Dashboard.jsx  History.jsx  Home.jsx  Subscribe.jsx  Unsubscribe.jsx
pipeline/: api.py  dedupe.py  email_send.py  fetch.py  mcp_server.py  requirements.txt  run.py  store.py  synthesize.py
tests/: test_api.py  test_dedupe.py  test_email_send.py  test_fetch.py  test_mcp_server.py  test_store.py  test_synthesize.py
